--- a/IntoCryptoSwiftUI/ar.lproj/Localizable.strings
+++ b/IntoCryptoSwiftUI/ar.lproj/Localizable.strings
@@ -6,3 +6,47 @@
   
 */
 "Live Prices" = "اسعار مباشره";
+"Sensation of true trading" = "الإحساس بالتداول الحقيقي";
+"Get a representation of the market" = "احصل على تمثيل للسوق";
+"and monitor your wallet" = "ومراقبة محفظتك";
+"Skip" = "تخطي";
+"Ideal Learning" = "التعلم المثالي";
+"register an account" = "انشىء حساب";
+"and start virtually trading" = "وابدأ التداول فعليًا";
+"with real-time prices risk free" = "بأسعار فورية خالية من المخاطر";
+"Start Now" = "ابدأ الآن";
+"Log in" = "تسجيل الدخول";
+"Username" = "اسم المستخدم";
+"Password" = "كلمة المرور";
+"Don't have an account?" = "ليس لديك حساب؟";
+"Sign up" = "إنشاء حساب";
+"Email" = "البريد الإلكتروني";
+"Portfolio" = "المحفظة";
+"Search by name or symbol..." = "...ابحث من خلال الاسم او الرمز";
+"Coin" = "العملة";
+"Price" = "السعر";
+"Home" = "الرئيسة";
+"Profile" = "الملف الشخصي";
+"Edit Portfolio" = "تعديل المحفظة";
+"Current price of" = "السعر الحالي";
+"Amount holding" = "الكمية المملوكة";
+"Current value" = "القيمة الحالية";
+"Save" = "حفظ";
+"Total portfolio value" = "إجمالي قيمةالمحفظة";
+"Total available cash" = "إجمالي النقد المتاح";
+"Total Gain/Loss cash" = "إجمالي الربح/الخسارة النقدية";
+"Back" = "رجوع";
+"Buy" = "شراء";
+"Sell" = "بيع";
+"Amount" = "الكميه";
+"Market price" = "سعر السوق";
+"Total" = "المجموع";
+"Owned" = "المملوكة";
+"Account" = "الحساب الشخصي";
+"Terms and conditions" = "الشر،ط و الأحكام";
+"Leave a review" = "اترك تعليق";
+"Change language" = "تغيير الللغة";
+"Dark mode" = "الوضع الليلي";
+"Log out" = "تسجيل خروج";
+"contact us" = "للتواصل";
+"Delete account" = "حذف الحساب";
