translation for account page

--- a/IntoCryptoSwiftUI/ar.lproj/Localizable.strings
+++ b/IntoCryptoSwiftUI/ar.lproj/Localizable.strings
@@ -37,10 +37,10 @@
 "Total" = "المجموع";
 "Owned" = "المملوكة";
 "Account" = "الحساب الشخصي";
-"Terms and conditions" = "الشر،ط و الأحكام";
-"Leave a review" = "اترك تعليق";
+"Terms and Conditions" = "الشر،ط و الأحكام";
+"Leave a Review" = "اترك تعليق";
 "Change language" = "تغيير الللغة";
-"Dark mode" = "الوضع الليلي";
-"Log out" = "تسجيل خروج";
-"contact us" = "للتواصل";
-"Delete account" = "حذف الحساب";
+"Dark Mode" = "الوضع الليلي";
+"Logout" = "تسجيل خروج";
+"Contact us" = "تواصل معنا";
+"Delete Account" = "حذف الحساب";
