--- a/IntoCryptoSwiftUI/en.lproj/Localizable.strings
+++ b/IntoCryptoSwiftUI/en.lproj/Localizable.strings
@@ -36,10 +36,10 @@
 "Total" = "Total";
 "Owned" = "Owned";
 "Account" = "Account";
-"Terms and conditions" = "Terms and conditions";
-"Leave a review" = "Leave a review";
+"Terms and Conditions" = "Terms and Conditions";
+"Leave a Review" = "Leave a Review";
 "Change language" = "Change language";
-"Dark mode" = "Dark mode";
-"Log out" = "Log out";
-"contact us" = "contact us";
-"Delete account" = "Delete account";
+"Dark Mode" = "Dark Mode";
+"Logout" = "Logout";
+"Contact us" = "Contact us";
+"Delete Account" = "Delete Account";
