worked on translation

--- a/IntoCryptoSwiftUI/ar.lproj/Localizable.strings
+++ b/IntoCryptoSwiftUI/ar.lproj/Localizable.strings
@@ -37,7 +37,7 @@
 "Total" = "المجموع";
 "Owned" = "المملوكة";
 "Account" = "الحساب الشخصي";
-"Terms and Conditions" = "الشر،ط و الأحكام";
+"Terms and Conditions" = "الشروط و الأحكام";
 "Leave a Review" = "اترك تعليق";
 "Change language" = "تغيير الللغة";
 "Dark Mode" = "الوضع الليلي";
