*App is done except for ShowBuySellView Toggling* Localization for the full app Done Login-Register-ResetPassword-Buy-Sell Buttons Done

--- a/IntoCryptoSwiftUI/ar.lproj/Localizable.strings
+++ b/IntoCryptoSwiftUI/ar.lproj/Localizable.strings
@@ -48,3 +48,21 @@
 "Logout" = "تسجيل خروج";
 "Contact us" = "تواصل معنا";
 "Delete Account" = "حذف الحساب";
+"Send Password Reset" = "إعادة تعيين كلمة المرور";
+"Name" = "الاسم";
+"Buy" = "شراء";
+"Sell" = "بيع";
+"Amount:" = "الكمية:";
+"Enter Amount" = "ادخل الكمية";
+"Market price:" = "سعر السوق:";
+"Your Total:" = "المجموع:";
+"Holdings Amount:" = "الكمية المملوكة:";
+"Overview" = "نظرة عامة";
+"Additional Details" = "تفاصيل إضافية";
+"Less" = "أقل";
+"Read more.." = "قراءة المزيد..";
+"Want to exchange this coin?" = "هل تريد تداول هذه العملة؟";
+"Start Exchanging!" = "ابدأ التداول!";
+"Buy" = "الشراء";
+"Sell" = "البيع";
+"Email: " = "البريد الالكتروني:";
