--- a/IntoCryptoSwiftUI/en.lproj/Localizable.strings
+++ b/IntoCryptoSwiftUI/en.lproj/Localizable.strings
@@ -47,3 +47,21 @@
 "Logout" = "Logout";
 "Contact us" = "Contact us";
 "Delete Account" = "Delete Account";
+"Send Password Reset" = "Send Password Reset";
+"Name" = "Name";
+"Buy" = "Buy";
+"Sell" = "Sell";
+"Amount:" = "Amount:";
+"Enter Amount" = "Enter Amount";
+"Market price:" = "Market price:";
+"Your Total:" = "Your Total:";
+"Holdings Amount:" = "Holdings Amount:";
+"Overview" = "Overview";
+"Additional Details" = "Additional Details";
+"Less" = "Less";
+"Read more.." = "Read more..";
+"Want to exchange this coin?" = "Want to exchange this coin?";
+"Start Exchanging!" = "Start Exchanging!";
+"Buy" = "Buy";
+"Sell" = "Sell";
+"Email: " = "Email: ";
