--- a/IntoCryptoSwiftUI/en.lproj/Localizable.strings
+++ b/IntoCryptoSwiftUI/en.lproj/Localizable.strings
@@ -60,8 +60,19 @@
 "Additional Details" = "Additional Details";
 "Less" = "Less";
 "Read more.." = "Read more..";
-"Want to exchange this coin?" = "Want to exchange this coin?";
-"Start Exchanging!" = "Start Exchanging!";
+"Want to trade this coin?" = "Want to trade this coin?";
+"Start Trading!" = "Start Trading!";
 "Buy" = "Buy";
 "Sell" = "Sell";
 "Email: " = "Email: ";
+"Current Price" = "Current Price";
+"Market Capitalization" = "Market Capitalization";
+"Rank" = "Rank";
+"Volume" = "Volume";
+"n/a" = "n/a";
+"24h High" = "24h High";
+"24h Low" = "24h Low";
+"24h Price Change" = "24h Price Change";
+"24h Market Cap Change" = "24h Market Cap Change";
+//"Block Time" = "Block Time";
+//"Hashing Algorithm" = "Hashing Algorithm";
