--- a/IntoCryptoSwiftUI/ar.lproj/Localizable.strings
+++ b/IntoCryptoSwiftUI/ar.lproj/Localizable.strings
@@ -75,6 +75,12 @@
 "24h Low" = "الانخفاض خلال ٢٤س";
 "24h Price Change" = " الأسعار خلال ٢٤س";
 "24h Market Cap Change" = " القيمة السوقية خلال ٢٤س";
-//"Block Time" = "وقت الكتلة";
-//"Hashing Algorithm" = "خوارزمية التجزئة";
+"Balance:" = "الرصيد:";
+"Reset Balance" = "استعادة الرصيد";
+"You can't sell!" = "لا تستطيع الشراء!";
+"You need to buy first" = "يجب عليك الشراء اولا";
+"Got it!" = "!فهمت";
+"You can't buy!" = "لا تستطيع الشراء!";
+"Reset or Sell" = "قم بالبيع اعادة التعيين";
+"Got it!" = "!فهمت";
 
