--- a/IntoCryptoSwiftUI/en.lproj/Localizable.strings
+++ b/IntoCryptoSwiftUI/en.lproj/Localizable.strings
@@ -77,8 +77,8 @@
 "Balance:" = "Balance:";
 "Reset Balance" = "Reset Balance";
 "You can't sell!" = "You can't sell!";
-"You need to buy first" = "You need to buy first";
+"Reset balance or Buy" = "Reset balance or Buy";
 "Got it!" = "Got it!";
 "You can't buy!" = "You can't buy!";
-"Reset or Sell" = "Reset or Sell";
+"Reset balance or Sell" = "Reset balance or Sell";
 "Got it!" = "Got it!";
